[package]
name = "db-up"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
# license-file = "../LICENSE.txt"
authors = ["Andreas Hubert <nanobot248@gmail.com>"]
description = "Main crate of the db-up project. Includes `migrations` macro and the `MigrationRunner`"
categories = ["database"]
keywords = ["database", "sql", "migrations", "orm"]
repository = "https://github.com/nanobot248/db-up"
homepage = "https://github.com/nanobot248/db-up"
documentation = "https://docs.rs/refinery/latest/db-up/"
readme = "README.md"
exclude = [
    "examples"
]

[dependencies.db-up-codegen]
path = "../db-up-codegen"
version = "0.1.0"

[dependencies.db-up-sql-changelog]
path = "../db-up-sql-changelog"
version = "0.1.0"

[dependencies.async-trait]
version = "0.1.64"
